--- a/MPlusHub.Web/appsettings.json
+++ b/MPlusHub.Web/appsettings.json
@@ -1,10 +1,20 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "IdentityServer": {
+    "Clients": {
+      "react_auth": {
+        "Profile": "IdentityServerSPA"
       }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\\\MSSQLLocalDB;Initial Catalog=MPlusHub;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
