--- a/MPlusHub.Web/ClientApp/package.json
+++ b/MPlusHub.Web/ClientApp/package.json
@@ -15,12 +15,14 @@
   "devDependencies": {
     "ajv": "^6.10.0",
     "cross-env": "^5.2.0",
-    "eslint-config-react-app": "^4.0.0",
-    "eslint-plugin-flowtype": "^3.7.0",
-    "eslint-plugin-import": "^2.17.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
     "react-scripts": "^3.0.0",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "typescript": "^3.9.5",
     "rimraf": "^2.6.2"
   },
   "eslintConfig": {
