Added MPlusHub.Identity and JWT Authentication

--- a/MPlusHub.Identity/appsettings.json
+++ b/MPlusHub.Identity/appsettings.json
@@ -6,9 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "IdentityServer": {
+    "Clients": {
+      "MPlusHub.Web": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MPlusHub;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
-
 }
