--- a/MPlusHub.Web/ClientApp/package.json
+++ b/MPlusHub.Web/ClientApp/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "oidc-client": "^1.10.1"
   },
   "devDependencies": {
     "ajv": "^6.10.0",
